Play state update

--- a/client/modules/configs/gameSetup.html
+++ b/client/modules/configs/gameSetup.html
@@ -5,5 +5,12 @@
   <div id="score">0</div>
 </div>
 <div class="pauseContainer hide">
-  <div id="pause">PAUSE</div>
+  <div id="pause">
+    <h2>PAUSED</h2>
+    <!-- <div id="pauseMenuChoices">
+      <p id="pauseResume" class="pauseMenuChoice">RESUME</p>
+      <p id="pauseQuit" class="pauseMenuChoice">QUIT</p>
+      <p id="pauseMusic" class="pauseMenuChoice">MUSIC</p>
+    </div> -->
+  </div>
 </div>
