Health and score containers adjusted. Bricks placed in container

--- a/client/modules/configs/gameSetup.html
+++ b/client/modules/configs/gameSetup.html
@@ -1,8 +1,11 @@
-<div class="healthContainer">
-  <div id="health">3</div>
-</div>
 <div class="scoreContainer">
-  <div id="score">0</div>
+  <div>SCORE: <span id="score">0</span></div>
+</div>
+<div class="healthContainer">
+  <!-- <div id="health"></div> -->
+  <div class="health"></div>
+  <div class="health"></div>
+  <div class="health"></div>
 </div>
 <div class="pauseContainer hide">
   <div id="pause">
