Storyline flow created together with additional fnctions and elements

--- a/client/configs/gameSetup.html
+++ b/client/configs/gameSetup.html
@@ -7,6 +7,9 @@
   <div class="health"></div>
   <div class="health"></div>
 </div>
+<div class="storyContainer">
+  <div id="storyText">-</div>
+</div>
 <div class="pauseContainer hide">
   <div id="pause">
     <h2>PAUSED</h2>
