--- a/src/configs/enterHighscore.html
+++ b/src/configs/enterHighscore.html
@@ -1,7 +1,13 @@
 <div class="enterHighscore">
-  <form method="POST" action="/highscores">
-    <input type="text" name="name" placeholder="Enter your name!" />
-    <input type="number" name="score" placeholder="Enter your score!" />
+  <form method="POST" action="/highscores" id="highscoreForm">
+    <input
+      id="playerName"
+      type="text"
+      name="name"
+      placeholder="Enter your name!"
+      required
+      autofocus
+    />
     <button>Enter!</button>
   </form>
 </div>
