Update for game flow between states

--- a/src/configs/gameSetup.html
+++ b/src/configs/gameSetup.html
@@ -13,10 +13,10 @@
 <div class="pauseContainer hide">
   <div id="pause">
     <h2>PAUSED</h2>
-    <!-- <div id="pauseMenuChoices">
-      <p id="pauseResume" class="pauseMenuChoice">RESUME</p>
+    <div id="pauseMenuChoices">
+      <p id="pauseResume" class="pauseMenuChoice chosen">RESUME</p>
       <p id="pauseQuit" class="pauseMenuChoice">QUIT</p>
-      <p id="pauseMusic" class="pauseMenuChoice">MUSIC</p>
-    </div> -->
+      <!-- <p id="pauseMusic" class="pauseMenuChoice">MUSIC</p> -->
+    </div>
   </div>
 </div>
