Time bonus update

--- a/src/configs/gameSetup.html
+++ b/src/configs/gameSetup.html
@@ -1,3 +1,8 @@
+<div class="timeContainer">
+  <div>
+    TIME: <span id="timeMinutes">00</span>:<span id="timeSeconds">00</span>
+  </div>
+</div>
 <div class="scoreContainer">
   <div>SCORE: <span id="score">0</span></div>
 </div>
