Sound controlls in pause menu

--- a/src/configs/gameSetup.html
+++ b/src/configs/gameSetup.html
@@ -19,8 +19,18 @@
   <div id="pause">
     <h2>PAUSED</h2>
     <div id="pauseMenuChoices">
-      <p id="pauseResume" class="pauseMenuChoice chosen">RESUME</p>
-      <p id="pauseQuit" class="pauseMenuChoice">QUIT</p>
+      <p id="pauseResume" class="chosen">RESUME</p>
+      <p id="pauseQuit">QUIT</p>
+      <div class="volume" id="pauseSoundEffects">
+        <p class="volumeControl">
+          Sound Effects <span id="soundVolume">5</span>
+        </p>
+      </div>
+      <div id="pauseSoundBackground" class="volume">
+        <p class="volumeControl">
+          Background sound <span id="backgroundVolume">5</span>
+        </p>
+      </div>
       <!-- <p id="pauseMusic" class="pauseMenuChoice">MUSIC</p> -->
     </div>
   </div>
