Styling / htm update. Improved looks

--- a/src/configs/gameOver.html
+++ b/src/configs/gameOver.html
@@ -1,6 +1,5 @@
 <div class="gameOverContainer">
-  <h1 class="title">This is an end to an exciting chapter in a young pirate's life!</h1>
-    Final score:
-    <span id="finalScore">0</span>
-  </div>
+  <h1 class="title">Shiver me timbers!</h1>
+  <p>This is an end to an exciting chapter in a young pirate's life!</p>
+  <div>Final score:<span id="finalScore">0</span></div>
 </div>
