--- a/src/configs/highscore.html
+++ b/src/configs/highscore.html
@@ -1,13 +1,17 @@
 <div class="highscoreContainer">
+  <h2>Leaderboard</h2>
   <table>
     <thead>
       <tr>
-          <th>Place</th>
-          <th>Name</th>
-          <th>Score</th>
+        <th>Place</th>
+        <th>Name</th>
+        <th>Score</th>
       </tr>
     </thead>
-    <tbody id="scoreTableBody">
-    </tbody>
+    <tbody id="scoreTableBody"></tbody>
   </table>
+  <div>
+    <p>🞀 Previous</p>
+    <p>Next 🞂</p>
+  </div>
 </div>
