--- a/src/configs/settings.html
+++ b/src/configs/settings.html
@@ -13,7 +13,7 @@
     <div id="settingsBack">Back</div>
   </div>
   <div class="controls">
-    <p>Controls</p>
+    <h2>Controls</h2>
     <div class="controlsContainer">
       <div class="controlsImg"></div>
       <div class="controlsDesc">
