--- a/src/configs/victory.html
+++ b/src/configs/victory.html
@@ -1,5 +1,5 @@
 <div class="victoryContainer">
-  <h1 class="title">Hurrayyy!</h1>
+  <h1 class="title">Hurray!</h1>
   <p>All of the obstacles are destroyed successfuly!</p>
   <p>Time Bonus: <span id="timeBonus">0</span></p>
 </div>
