style fix and and submitting score also with mouse click

--- a/src/configs/enterHighscore.html
+++ b/src/configs/enterHighscore.html
@@ -8,6 +8,7 @@
       required
       autofocus
     />
-    <button>Submit!</button>
+    <button id="highscoresSubmitBtn">Submit!</button>
   </form>
+  <p>Press ESC to quit</p>
 </div>
