--- a/src/configs/enterHighscore.html
+++ b/src/configs/enterHighscore.html
@@ -7,6 +7,7 @@
       placeholder="Enter your name!"
       required
       autofocus
+      maxlength="15"
     />
     <button id="highscoresSubmitBtn">Submit!</button>
   </form>
