Super ball power up

--- a/src/configs/gameSetup.html
+++ b/src/configs/gameSetup.html
@@ -14,6 +14,9 @@
 <div class="storyContainer">
   <div id="storyText">-</div>
 </div>
+<div class="powerUpContainer">
+  <p id="powerUp">Pow</p>
+</div>
 <div class="pauseContainer hide">
   <div id="pause">
     <h2>PAUSED</h2>
